# graphs-remaster

./: .gitignore  .pre-commit-config.yaml  README.md  api.http  bump_version.py  docker-compose.yaml  http-client.env.json  pyproject.toml  setup.cfg
.github/workflows/: issue_branch.yaml  lint_api.yaml  lint_app.yaml  tag_on_merge.yaml
api/: Dockerfile  get_poetry_env_path.sh  pyproject.toml  uvicorn_config.py
api/config/: api.py  asgi.py  celery.py  routing.py  settings.py  urls.py  wsgi.py
api/core/: admin.py  hashers.py  models.py  permissions.py  querysets.py
api/core/api/: schemas.py
api/core/management/commands/: startup.py
api/core/migrations/: 0001_initial.py  0002_alter_customuser_options_alter_customuser_managers_and_more.py
api/data/: admin.py  models.py  tasks.py  utils.py
api/data/api/: controllers.py  schemas.py
api/data/migrations/: 0001_initial.py  0002_csvdata_bg_input_csvdata_bolus_csvdata_carb_input_and_more.py  0003_csvdata_timestamp.py  0004_csvdata_user.py  0005_csvfile_user.py  0006_alter_csvdata_bg.py  0007_csvdata_csv_file.py  0008_csvdata_carb_ratio_csvdata_total_basal.py  0009_csvfile_file_hash_alter_csvfile_unique_together.py
api/data/raw/: alarms_data_1.csv  cgm_data_1.csv  cgm_data_2.csv  cgm_data_3.csv  insulin_data_1.csv
api/data/raw/Insulin data/: bolus_data_1.csv
api/event/: admin.py  middleware.py  models.py
api/event/migrations/: 0001_initial.py  0002_log.py
api/websocket/: consumers.py
app/: eslint.config.js  package.json  pnpm-lock.yaml
app/src/: App.css  App.tsx
caddy/: Caddyfile
nginx/: Dockerfile  default.conf  nginx.conf
